# ollama-Agent

./: README.md  ai-recruitment-platform.html  candidate-portal-new.html  langchain_guide.md  main.py  recruiter-portal.html  start.ipynb  tempCodeRunnerFile.python
AI Recruiter/: candidate-portal.html  index.html  login.html  signup.html
AI Recruiter/js/: header.js  ui-enhancements.js
Pr-Ti/agent/ai-recruiter-agency/: main.py  notebook.ipynb  pyproject.toml  requirements.txt
Pr-Ti/agent/ai-recruiter-agency/agents/: analyzer_agent.py  base_agent.py
Pr-Ti/rag/: pyproject.toml
chroma_db/: chroma.sqlite3
css/: styles.css
js/: ai-job-screening.js  candidate-portal.js  loader.js  recruiter-portal.js
resource/ai-recruiter-agency/agents/: base_agent.py
