[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "ollama>=0.4.8",
    "pdfminer>=20191125",
    "streamlit>=1.44.1",
    "unstructured>=0.17.2",
]
